--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,39 @@
-/* --------------- Modal-review ---------------- */
+:root {
+    font-family: Montserrat, sans-serif;
+    font-size: 14px;
+    line-height: 1.2;
+    font-weight: 400;
+    letter-spacing: -0.02em;
+
+    --primary-text-color: #111111;
+    --primary-background-color: #e2e2e2;
+    --2nd-background-color: #1e1823;
+    --primary-accent-color: #fd9222;
+
+    color: #111111;
+    background-color: #e2e2e2;
+
+    font-synthesis: none;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-text-size-adjust: 100%;
+}
+
+.container {
+    width: 100%;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+
+
+
+
+/* Modal-review */
 
 .backdrop-review {
     width: 100%;
