--- a/css/styles.css
+++ b/css/styles.css
@@ -28,232 +28,243 @@
     margin-right: auto;
 }
 
-
-
-
-
-
-/* Modal-review */
-
-.backdrop-review {
-    width: 100%;
-    height: 100%;
-    background-color: rgba(46, 47, 66, 0.4);
-    position: fixed;
-    top: 0;
-    left: 0;
-    overflow: scroll;
-    transition-property: opacity, visibility, transform;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+@media screen and (min-width: 320px) {
+    .container {
+        max-width: 320px;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
 }
 
-.modal-review {
-    width: 311px;
-    min-height: 471px;
-    position: absolute;
-    top: 5px;
-    left: 50%;
-    transform: translateX(-50%);
-    background: #FAFAFA;
-    border-radius: 15px;
-    padding: 32px 24px;
-}
-
-.btn-modal-review-close {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    top: 14px;
-    right: 14px;
-    padding: 0;
-    width: 24px;
-    height: 24px;
-    border-radius: 50%;
-    border-color: transparent;
-    background-color: transparent;
-    fill: rgba(17, 17, 17, 1);
-    cursor: pointer;
-    transition-property: background-color, fill;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.btn-modal-review-close:is(:hover, :focus) {
-    background-color: #FCF1E0;
-    fill: #FD9222;
-}
-
-.modal-review-title {
-    margin: 0;
-    max-width: 255px;
-    font-weight: 600;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: -0.03em;
-    text-transform: uppercase;
-    color: var(--primary-text-color);
-}
-
-.modal-review-title span {
-    color: rgba(253, 146, 34, 1);
-}
-
-.modal-review-form {
-    margin-top: 32px;
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    row-gap: 14px;
-}
-
-.modal-review-label {
-    position: relative;
-}
-
-.modal-review-input {
-    width: 100%;
-    height: 45px;
-    padding: 14px 18px;
-    border: 1.5px solid rgba(17, 17, 17, 0.05);
-    filter: drop-shadow(0px 5.44492px 5.44492px rgba(0, 0, 0, 0.03));
-    border-radius: 8px;
-    background: #FAFAFA;
-}
-
-.modal-review-input::placeholder {
-    font-size: 14px;
-    line-height: 1.21;
-    letter-spacing: -0.02em;
-    color: rgba(64, 64, 64, 0.3);
-}
-
-.modal-review-icon-position {
-    display: flex;
-    justify-content: space-between;
-    position: relative;
-    width: 74px;
-    padding: 4px 8px 4px 0;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.21;
-    letter-spacing: -0.02em;
-    color: #000000;
-    position: absolute;
-    top: 50%;
-    left: 18px;
-    transform: translateY(-50%);
-    border-right: 2px solid rgba(64, 64, 64, 0.3);
-}
-
-.modal-review-tel {
-    padding: 0;
-    padding: 10px 18px 10px 106px;
-}
-
-.modal-review-textarea {
-    height: 91px;
-    resize: none;
-}
-
-.modal-review-send-btn {
-    display: block;
-    margin-top: 4px;
-    width: 93px;
-    height: 41px;
-    background: #FD9222;
-    border-radius: 100px;
-    border-color: transparent;
-    font-weight: 600;
-    font-size: 14px;
-    line-height: 1.21;
-    color: #FFFFFF;
-    transition-property: color, background-color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-review-send-btn:is(:hover, :focus) {
-    cursor: pointer;
-    color: rgba(253, 146, 34, 1);
-    background-color: rgba(252, 241, 224, 1);
+@media screen and (min-width: 375px) {
+    .container {
+        max-width: 375px;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
 }
 
 @media screen and (min-width: 768px) {
+    .container {
+        max-width: 768px;
+        padding-left: 32px;
+        padding-right: 32px;
+    }
+}
 
-    .modal-review {
-        width: 517px;
-        min-height: 631px;
-        top: 50%;
-        transform: translate(-50%, -50%);
-        padding: 40px;
+@media screen and (min-width: 1200px) {
+    .container {
+        max-width: 1200px;
+    }
+}
+
+.list {
+    list-style: none;
+    text-decoration: none;
+}
+
+.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+}
+
+.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: all;
+    transform: translateX(0);
+}
+
+/* @import url('./uniqe-comp.css'); */
+/* @import url('./modal-review.css'); */
+
+
+/* --------------- Uniq-comp ---------------- */
+.uniq-section {
+    padding-top: 36px;
+    padding-bottom: 36px;
+
+    background: #E2E2E2;
+}
+
+.uniq-title {
+    margin: 0 auto;
+    max-width: 283px;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 1.2;
+    text-align: center;
+    letter-spacing: -0.03em;
+    text-transform: uppercase;
+
+    color: #111111;
+}
+
+.uniq-title>span {
+    color: rgba(253, 146, 34, 1);
+}
+
+.uniq-text {
+    margin: 24px auto 0;
+
+    font-size: 14px;
+    line-height: 1.29;
+    text-align: center;
+    letter-spacing: -0.02em;
+
+    color: #111111;
+}
+
+.uniq-card-list {
+    padding: 0;
+    margin: 32px 0 0;
+
+    max-height: 270px;
+}
+
+.uniq-card-link {
+    text-decoration: none;
+}
+
+.uniq-card {
+    background: #FD9222;
+    border-radius: 15px;
+
+    padding: 8px;
+
+    max-width: 336px;
+
+    display: flex;
+    flex-direction: column;
+}
+
+.uniq-img {
+    display: flex;
+    justify-content: center;
+}
+
+.uniq-subtitle {
+    margin-top: 25px;
+    display: flex;
+    justify-content: start;
+
+
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 1.29;
+    letter-spacing: -0.02em;
+    text-transform: uppercase;
+
+    color: #FFFFFF;
+}
+
+.uniq-card-content {
+    padding: 8px;
+}
+
+.ucc-title {
+    margin: 0;
+
+    font-weight: 600;
+    font-size: 18px;
+    line-height: calc(22/18);
+    letter-spacing: -0.03em;
+    text-transform: uppercase;
+
+    color: #111111;
+}
+
+.ucc-btn-wrap {
+    display: flex;
+    column-gap: 6px;
+
+    margin-top: 8px;
+}
+
+.ucc-btn-one {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 6px 16px;
+
+    background: #FD9222;
+    border-radius: 35px;
+    border-color: transparent;
+
+    font-size: 10px;
+    line-height: 1.2;
+
+    color: #FFFFFF;
+}
+
+.ucc-btn-two {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 6px 16px;
+
+    background: #FAFAFA;
+    border: 1px solid #FD9222;
+    border-radius: 35px;
+
+    font-size: 10px;
+    line-height: 1.2;
+
+    color: #111111;
+}
+
+.ucc-text {
+    display: inline-block;
+
+    margin: 14px 0 0;
+    max-width: 279px;
+    min-height: 146px;
+    height: 146px;
+
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.29;
+    letter-spacing: 0.02em;
+
+    color: #111111;
+
+    overflow: hidden;
+}
+
+
+@media screen and (min-width: 375px) {
+
+    .uniq-text {
+        max-width: 300px;
     }
 
-    .btn-modal-review-close {
-        top: 24px;
-        right: 24px;
-        width: 28px;
-        height: 28px;
+    .uniq-card {
+        padding: 28px;
     }
 
-    .btn-modal-review-close-icon {
-        width: 14px;
-        height: 14px;
+    .uniq-card-content {
+        padding: 28px;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .uniq-section {
+        padding-top: 50px;
+        padding-bottom: 50px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+
+    .uniq-section {
+        padding-top: 64px;
+        padding-bottom: 64px;
     }
 
-    br {
-        display: none;
+    .uniq-card {
+
+        max-width: 270px;
     }
 
-    .modal-review-title {
-        max-width: 298px;
-        font-size: 24px;
-        line-height: 1.17;
-    }
-
-    .modal-review-form {
-        margin-top: 40px;
-        row-gap: 19px;
-    }
-
-    .modal-review-input {
-        height: 66px;
-        padding: 22px 24px;
-    }
-
-    .modal-review-input::placeholder {
-        font-size: 18px;
-        line-height: 1.22;
-    }
-
-    .modal-review-icon-position {
-        width: 125px;
-        padding: 5px 32px 5px 0;
-        font-size: 18px;
-        line-height: 1.22;
-        position: absolute;
-        top: 50%;
-        left: 24px;
-    }
-
-    .modal-review-tel {
-        padding: 0;
-        padding: 17px 24px 17px 176px;
-    }
-
-    .modal-review-tel-icon {
-        width: 32px;
-        height: 24px;
-    }
-
-    .modal-review-textarea {
-        height: 137px;
-    }
-
-    .modal-review-send-btn {
-        margin-top: -1px;
-        width: 117px;
-        height: 45px;
-    }
 }
